@@ -51,7 +51,7 @@ enum {
 @property (nonatomic,readonly,assign) id target;
 
 /** The original target, since target can be nil.
- Is the target that were used to run the action. Unless you are doing something complex, like ActionManager, you should NOT call this method.
+ Is the target that were used to run the action. Unless you are doing something complex, like CCActionManager, you should NOT call this method.
  @since v0.8.2
 */
 @property (nonatomic,readonly,assign) id originalTarget;
@@ -112,10 +112,10 @@ enum {
  */
 @interface CCRepeatForever : CCAction <NSCopying>
 {
-	CCActionInterval *other;
+	CCActionInterval *innerAction_;
 }
-/** Inner action. It will be copied */
-@property (nonatomic,copy) CCActionInterval *action;
+/** Inner action */
+@property (nonatomic, readwrite, retain) CCActionInterval *innerAction;
 
 /** creates the action */
 +(id) actionWithAction: (CCActionInterval*) action;
@@ -126,15 +126,18 @@ enum {
 /** Changes the speed of an action, making it take longer (speed>1)
  or less (speed<1) time.
  Useful to simulate 'slow motion' or 'fast forward' effect.
- @warning This action can't be Sequenceable because it is not an IntervalAction
+ @warning This action can't be Sequenceable because it is not an CCIntervalAction
  */
 @interface CCSpeed : CCAction <NSCopying>
 {
-	CCActionInterval	*other;
-	float speed;
+	CCActionInterval	*innerAction_;
+	float speed_;
 }
 /** alter the speed of the inner function in runtime */
 @property (nonatomic,readwrite) float speed;
+/** Inner action of CCSpeed */
+@property (nonatomic, readwrite, retain) CCActionInterval *innerAction;
+
 /** creates the action */
 +(id) actionWithAction: (CCActionInterval*) action speed:(float)rate;
 /** initializes the action */
