@@ -121,6 +121,7 @@
 #pragma mark -
 #pragma mark RepeatForever
 @implementation CCRepeatForever
+@synthesize innerAction=innerAction_;
 +(id) actionWithAction: (CCActionInterval*) action
 {
 	return [[[self alloc] initWithAction: action] autorelease];
@@ -129,38 +130,38 @@
 -(id) initWithAction: (CCActionInterval*) action
 {
 	if( (self=[super init]) )	
-		other = [action retain];
+		self.innerAction = action;
 
 	return self;
 }
 
 -(id) copyWithZone: (NSZone*) zone
 {
-	CCAction *copy = [[[self class] allocWithZone: zone] initWithAction:[[other copy] autorelease] ];
+	CCAction *copy = [[[self class] allocWithZone: zone] initWithAction:[[innerAction_ copy] autorelease] ];
     return copy;
 }
 
 -(void) dealloc
 {
-	[other release];
+	[innerAction_ release];
 	[super dealloc];
 }
 
 -(void) startWithTarget:(id)aTarget
 {
 	[super startWithTarget:aTarget];
-	[other startWithTarget:target_];
+	[innerAction_ startWithTarget:target_];
 }
 
 -(void) step:(ccTime) dt
 {
-	[other step: dt];
-	if( [other isDone] ) {
-		ccTime diff = dt + other.duration - other.elapsed;
-		[other startWithTarget:target_];
+	[innerAction_ step: dt];
+	if( [innerAction_ isDone] ) {
+		ccTime diff = dt + innerAction_.duration - innerAction_.elapsed;
+		[innerAction_ startWithTarget:target_];
 		
 		// to prevent jerk. issue #390
-		[other step: diff];
+		[innerAction_ step: diff];
 	}
 }
 
@@ -172,10 +173,8 @@
 
 - (CCActionInterval *) reverse
 {
-	return [CCRepeatForever actionWithAction:[other reverse]];
+	return [CCRepeatForever actionWithAction:[innerAction_ reverse]];
 }
-
-@synthesize action=other;
 @end
 
 //
@@ -184,7 +183,8 @@
 #pragma mark -
 #pragma mark Speed
 @implementation CCSpeed
-@synthesize speed;
+@synthesize speed=speed_;
+@synthesize innerAction=innerAction_;
 
 +(id) actionWithAction: (CCActionInterval*) action speed:(float)r
 {
@@ -194,49 +194,49 @@
 -(id) initWithAction: (CCActionInterval*) action speed:(float)r
 {
 	if( (self=[super init]) ) {
-		other = [action retain];
-		speed = r;
+		self.innerAction = action;
+		speed_ = r;
 	}
 	return self;
 }
 
 -(id) copyWithZone: (NSZone*) zone
 {
-	CCAction *copy = [[[self class] allocWithZone: zone] initWithAction:[[other copy] autorelease] speed:speed];
+	CCAction *copy = [[[self class] allocWithZone: zone] initWithAction:[[innerAction_ copy] autorelease] speed:speed_];
     return copy;
 }
 
 -(void) dealloc
 {
-	[other release];
+	[innerAction_ release];
 	[super dealloc];
 }
 
 -(void) startWithTarget:(id)aTarget
 {
 	[super startWithTarget:aTarget];
-	[other startWithTarget:target_];
+	[innerAction_ startWithTarget:target_];
 }
 
 -(void) stop
 {
-	[other stop];
+	[innerAction_ stop];
 	[super stop];
 }
 
 -(void) step:(ccTime) dt
 {
-	[other step: dt * speed];
+	[innerAction_ step: dt * speed_];
 }
 
 -(BOOL) isDone
 {
-	return [other isDone];
+	return [innerAction_ isDone];
 }
 
 - (CCActionInterval *) reverse
 {
-	return [CCSpeed actionWithAction:[other reverse] speed:speed];
+	return [CCSpeed actionWithAction:[innerAction_ reverse] speed:speed_];
 }
 @end
 
