@@ -96,6 +96,10 @@
 	id targetCallback_;
 	SEL selector_;
 }
+
+/** Target that will be called */
+@property (nonatomic, readwrite, retain) id targetCallback;
+
 /** creates the action with the callback */
 +(id) actionWithTarget: (id) t selector:(SEL) s;
 /** initializes the action with the callback */
@@ -139,6 +143,9 @@ typedef void (*CC_CALLBACK_ND)(id, SEL, id, void *);
 {
 	id	object_;
 }
+/** object to be passed as argument */
+@property (nonatomic, readwrite, retain) id object;
+
 /** creates the action with the callback and the object to pass as an argument */
 +(id) actionWithTarget: (id) t selector:(SEL) s object:(id)object;
 /** initializes the action with the callback and the object to pass as an argument */
